--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -30,8 +30,7 @@
   color: white;
   cursor: pointer;
   background-color: black;
-  transition: 0.3s ease-in-out;
-
+  transition: 0.4s ease-in-out;
   border: 1px solid white;
 }
 
@@ -40,6 +39,12 @@
   font-size: 10px;
   margin-left: 10px;
 }
+
+.btn-dark:hover {
+ background-color:grey;
+  border:none;
+}
+
 
 * {
   margin: 0;
